--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
@@ -36,5 +37,8 @@
     "> 1%",
     "last 2 versions",
     "IE 10"
-  ]
+  ],
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  }
 }
