--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "node-sass": "^4.13.0",
     "node-sass-tilde-importer": "^1.0.2"
   },
@@ -41,6 +42,8 @@
   ],
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "normalize.css": "^8.0.1"
+    "jquery": "^3.4.1",
+    "normalize.css": "^8.0.1",
+    "slick-carousel": "^1.8.1"
   }
 }
